# phasma-editor

./: .gitignore  AGENTS.md  LICENSE  README.md  phasmo_editor_old.py  pyproject.toml
src/phasmo_editor/: __init__.py  __main__.py  cli.py  config.py  crypto.py  game_data.py  save_parser.py
src/phasmo_editor/theme/: __init__.py  catppuccin_mocha.xml  styles.qss  theme_manager.py
src/phasmo_editor/ui/: __init__.py  equipment_tab.py  general_tab.py  layout_constants.py  main_window.py  settings_tab.py  stats_tab.py
src/phasmo_editor/ui/widgets/: __init__.py  collapsible_section.py  equipment_card.py  flow_layout.py  stat_row.py
