[project]
name = "phasmo_editor"
version = "2.0.0"
description = "Phasmophobia save file editor with GUI - Edit money, level, prestige, and equipment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "stth12", email = "stth12@example.com" }
]
keywords = ["phasmophobia", "save-editor", "game", "modding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "cryptography>=41.0.0",
    "PySide6>=6.5.0",
    "qt-material>=2.14",
]

[project.scripts]
phasmo-editor = "phasmo_editor.__main__:main"

[project.urls]
Homepage = "https://github.com/stth12/PhasmoEditor"
Repository = "https://github.com/stth12/PhasmoEditor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phasmo_editor"]

[dependency-groups]
dev = ["pytest>=7.0.0"]
